--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="main_reading">闲读</string>
     <string name="member">成为会员</string>
     <string name="about">关于</string>
+    <string name="loading">加载中~~~</string>
+    <string name="reload">点击重新加载</string>
+    <string name="net_error">网络访问错误，请稍后再试</string>
+    <string name="empty">还没有数据哦</string>
+    <string name="no_net">网络不可用,请检查你的网络</string>
 </resources>
