--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="main_videos">视频</string>
     <string name="main_welfare">福利</string>
     <string name="main_reading">闲读</string>
+    <string name="main_episode">段子</string>
     <string name="member">成为会员</string>
     <string name="about">关于</string>
     <string name="loading">加载中~~~</string>
