--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">图图啥</string>
+    <string name="app_name">托米汤-图啥</string>
     <string name="main_home">首页</string>
     <string name="main_category">分类</string>
     <string name="main_videos">视频</string>
